tests/machine/x/java/map_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmap_assign1058901577/001/MapAssign.java:22: error: cannot find symbol
    System.out.println(scores.bob);
                             ^
  symbol:   variable bob
  location: variable scores of type Alice
Note: /tmp/TestCompileValidProgramsmap_assign1058901577/001/MapAssign.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error


  1| var scores = {"alice": 1}
  2| scores["bob"] = 2